// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CAlert customize 1`] = `
<div>
  <div
    class="alert bg-secondary text-white alert-dismissible fade show bazinga"
    role="alert"
  >
    Test
    <button
      aria-label="Close"
      class="btn btn-close"
      type="button"
    />
  </div>
</div>
`;

exports[`loads and displays CAlert component 1`] = `
<div>
  <div
    class="alert alert-primary show"
    role="alert"
  >
    Test
  </div>
</div>
`;
